liveness_probe.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
  test: liveness
 name: liveness-http
spec:
 containers:
 - args:
   - /server
   image: k8s.gcr.io/liveness
   livenessProbe: 
    httpGet:
     path: /healthz
     port: 8080
     httpHeaders:
     - name: X-Custom-Header
       value: Awesome
    initialDelaySeconds: 15
    timeoutSeconds: 1
 name: liveness
