myapp.yaml
apiVersion: v1
kind: Pod
metadata:
 name: myapp
 labels:
  app: myapp
spec:
 containers:
 - name: myapp-containers
   image: busybox
   command: ['sh','-c','echo The app is running! && sleep 3600']
