mydbmyservice.yaml
apiVersion: v1
kind: Service
metadata:
 name: myservice
spec:
 ports:
 - protocol: tcp
   port: 80
   targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
 name: mydb
spec:
 ports:
 - protocol: tcp
   port: 80
   targetPort: 9377
